--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">About me</a>
+          <a class="nav-link" href="#">About Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact me</a>
+          <a class="nav-link" href="#">Contact Me</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">My Socials</a>
